# wiki-js-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  start.sh
config/: example.env
src/: server.py
